updated description on home to rework emojis

--- a/index.html
+++ b/index.html
@@ -58,21 +58,23 @@ $('#footer').load('http://emilyporat.com/footer.html');
 
 	<div class="panel" id="summary">
 		<div class="space"></div>
+		<div class="space"></div>
 		<h2 class="body right">So, Why Emily?</h2>
 			<div class="space"></div>
 			<div class="body right">
-				<h3>What I'm All About</h3>
-				<p>🧪 I prioritize utility, inclusivity, and usability (in that order). My design process isn't an exact science, but it is scientific: I view every design concept as a hypothesis waiting to be tested. Spreadsheets and pro-con lists are my secret weapon when it comes to organizing and synthesizing complexity - which is what I do best. </p>
-				<p>💬 While I consider myself a generalist, I shine most in the early stages of design because I firmly believe that (just enough) research is essential to getting a product right. There is nothing more satisfying to me than a neatly packaged deck that breaks down thousands of research findings into just a few slides.</p>
-				<p>🏅 I have really high standards for myself - I'm not physically capable of half-assing something. I know when to step up and take charge, but I also strive to give others opportunities to make an impact.</p>
+				<h3>What I'm All About 👍</h3>
+				<p>I prioritize utility, inclusivity, and usability (in that order). My design process isn't an exact science, but it is scientific: I view every design concept as a hypothesis waiting to be tested. Spreadsheets and pro-con lists are my secret weapon when it comes to organizing and synthesizing complexity - which is what I do best. </p>
+				<p>While I consider myself a generalist, I shine most in the early stages of design because I firmly believe that (just enough) research is essential to getting a product right. There is nothing more satisfying to me than a neatly packaged deck that breaks down thousands of research findings into just a few slides.</p>
+				<p>I have really high standards for myself - I'm not physically capable of half-assing something. I know when to step up and take charge, but I also strive to give others opportunities to make an impact.</p>
 
 				<div class="space"></div>
-				<h3>What I'm Not All About</h3>
-				<p>🙅‍♀️ I'm not a pixel-pusher, a professional rectangle-drawer, or a unicorn/ninja/superhero. I care about nailing down the "why" before the "how," and I'm not afraid to stand up for what I believe in.</p>
+				<h3>What I'm Not All About 🙅‍♀️</h3>
+				<p>I'm not a pixel-pusher, a professional rectangle-drawer, or a unicorn/ninja/superhero. I care about nailing down the "why" before the "how," and I'm not afraid to stand up for what I believe in.</p>
 
 				<div class="space"></div>
-				<h3>How I Got Here</h3>
-				<p>📚 My formal education at Carnegie Mellon was in Information Systems and Human-Computer Interaction, but I didn't stop learning when I graduated. Reading books from folks like <a target="_blank" href="https://www.ruinedby.design/">Mike Monteiro</a>, <a target="_blank" href="http://www.nointerface.com/book/">Golden Krishna</a>, and <a target="_blank" href="https://us.sagepub.com/en-us/nam/qualitative-research-evaluation-methods/book232962">Michael Patton</a> (just to name a few) have helped me fill in the gaps and transition my career from case study to reality. They've influenced me to question my assumptions, ask 'why' more, and practice my craft with rigor.</p>
+				<h3>How I Got Here 📚</h3>
+				<p>My formal education at Carnegie Mellon was in Information Systems and Human-Computer Interaction, but I didn't stop learning when I graduated. Reading books from folks like <a target="_blank" href="https://www.ruinedby.design/">Mike Monteiro</a>, <a target="_blank" href="http://www.nointerface.com/book/">Golden Krishna</a>, and <a target="_blank" href="https://us.sagepub.com/en-us/nam/qualitative-research-evaluation-methods/book232962">Michael Patton</a> (just to name a few) have helped me fill in the gaps and transition my career from case study to reality. They've influenced me to question my assumptions, ask 'why' more, and practice my craft with rigor.</p>
+				<div class="space"></div>
 			</div>
 	</div>
 
