updated lists and mobile

--- a/chris.html
+++ b/chris.html
@@ -39,7 +39,6 @@ $('#footer').load('http://emilyporat.com/footer.html');
 
 <body class="preload">
 <meta name="viewport" content="width=device-width">
-<div id="nav"></div>
 
 	<div class="full-width" style="height: 100vh;  text-align: center; padding-top: 100px">
 
@@ -54,11 +53,11 @@ $('#footer').load('http://emilyporat.com/footer.html');
 			<div id="Compliment" class="tabcontent">
 				<div class="complimentZone">
 					<div class="chrisCardContainer">
-						<div class="chrisCard"></div>
+						<div class="chrisCard">Chris could pull off  a cowboy hat. Yeehaw!</div>
 					</div>	
 				</div>
 
-				<button class="tab center" onclick="addCompliment()" style="margin-top: 50px; width: 330px">
+				<button class="tab center" onclick="addCompliment(0)" style="margin-top: 50px; width: 330px">
 		        	<h4>New Compliment <i class="fas fa-redo"></i></h4>
 		      	</button>
 		     </div>
@@ -70,7 +69,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
 						<div class="chrisCard"></div>
 					</div>	
 				</div>
-				<button class="tab center" onclick="addCompliment()" style="margin-top: 50px; width: 330px">
+				<button class="tab center" onclick="addCompliment(1)" style="margin-top: 50px; width: 330px">
 		        	<h4>New Date Idea <i class="fas fa-redo"></i></h4>
 		      	</button>
 			</div>
@@ -82,7 +81,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
 					</div>	
 				</div>
 
-				<button class="tab center" onclick="addCompliment()" style="margin-top: 50px; width: 330px">
+				<button class="tab center" onclick="addCompliment(2)" style="margin-top: 50px; width: 330px">
 		        	<h4>New Self Care Tip <i class="fas fa-redo"></i></h4>
 		      	</button>
 		      
@@ -97,5 +96,4 @@ $('#footer').load('http://emilyporat.com/footer.html');
 
 <script src="js/general.js"></script>
 
-<div id="footer"></div>
 </html>
