updating wrapper and removing old projects stlye from bottom of pages

--- a/about.html
+++ b/about.html
@@ -37,12 +37,12 @@
       <div id="nav"></div>
       <div id="arrow-up" onclick="slideUp()"><i class="fa fa-angle-up"></i></div>
 
-      <div class="full-width" style="background-color: var(--mediumgray); height: 60vh;">
+      <div class="full-width" style="background-color: var(--mediumgray);">
         <div class="title-wrapper animate-reveal animate-first">
           <div class="title">
             <div>
               <h1 style="color: white">About</h1>
-              <div class="short-divider" style="background-color: var(--pink)"></div>
+              <div class="short-divider" style="background-color: var(--purple)"></div>
               <h3 style="color: white">Read on to learn more about what I do, my skills, values, and background.</h3>
             </div>
           </div>
