--- a/fha.html
+++ b/fha.html
@@ -45,7 +45,7 @@
 		</div>
 	</div>
 
-	<div class="full-width" style="background-color: var(--pink); height: 75vh; margin-top: 70px">
+	<div class="full-width" style="background-color: var(--pink);">
 		<div class="title-wrapper animate-reveal animate-first">
 			<div class="title">
 				<div>
@@ -92,7 +92,7 @@
 			</div>
 	</div>
 
-	<div class="full-width">
+	<div class="full-width-mid-page">
 		<div class="panel dark">
 			<img class="pic-left" src="pics/FHA/branding-options.png">
 		</div>
@@ -153,7 +153,7 @@
 			</div>
 	</div>
 
-	<div class="full-width">
+	<div class="full-width-mid-page">
 		<div class="panel dark">
 			<img class="pic-left" src="pics/FHA/stakeholder-interview-process.png">
 		</div>
@@ -169,7 +169,7 @@
 		</div>
 	</div>
 
-	<div class="full-width">
+	<div class="full-width-mid-page">
 		<div class="panel medium">
 			<img class="pic-left" src="pics/FHA/interview-insights.png">
 		</div>
@@ -199,7 +199,7 @@
 		</div>
 	</div> -->
 
-<div id="projects">
+<!-- <div id="projects">
 
 	<div class="divider"></div>
 	<h1>More Projects</h1>
@@ -248,7 +248,7 @@
 		</div>
 	</div>
 	</div>
-</div>
+</div> -->
 	  	
   	<div id="footer"></div>
   	</meta>
