--- a/fms-pos.html
+++ b/fms-pos.html
@@ -46,7 +46,7 @@
 	</div>
 
 
-	<div class="full-width" style="background-color: var(--orange); height: 75vh; margin-top: 70px">
+	<div class="full-width" style="background-color: var(--orange);">
 		<div class="title-wrapper animate-reveal animate-first">
 			<div class="title">
 				<div>
@@ -133,14 +133,14 @@
 			</div>
 	</div>
 
-	<div class="full-width">
+	<div class="full-width-mid-page">
 		<div class="panel dark">
 			<img class="pic-left" src="pics/fms/web-ui-overview.png">
 		</div>
 	</div>	
 
 	
-	<div class="full-width">
+	<div class="full-width-mid-page">
 		<div class="panel dark" style="background-color: white">
 			<img class="pic-left" src="pics/fms/mobile-ui-overview.png">
 		</div>
@@ -214,7 +214,7 @@
 	</div>
 
 	
-	<div class="full-width">
+	<div class="full-width-mid-page">
 		<div class="panel dark" style="background-color: white">
 			<img class="pic-left" src="pics/fms/journey-map.png">
 		</div>
@@ -327,7 +327,7 @@
 		</div>
 	</div>
 
-	<div class="full-width">
+	<div class="full-width-mid-page">
 		<div class="panel dark">
 			<img class="pic-left" src="pics/fms/web-data-entry.png">
 		</div>
@@ -381,7 +381,7 @@
 		</div>
 	</div>
 
-	<div class="full-width">
+	<div class="full-width-mid-page">
 		<div class="panel dark">
 			<img class="pic-left" src="pics/fms/web-errors.png">
 		</div>
@@ -422,7 +422,7 @@
 			</div>
 	</div>
 
-	<div class="full-width">
+	<div class="full-width-mid-page">
 		<div class="panel dark">
 			<img class="pic-left" src="pics/fms/mobile-ia.png">
 		</div>
@@ -441,7 +441,7 @@
 		</div>
 	</div>
 
-	<div class="full-width">
+	<div class="full-width-mid-page">
 		<div class="panel dark">
 			<img class="pic-left" src="pics/fms/mobile-order-flow.png">
 		</div>
@@ -586,7 +586,7 @@
 		</div>
 	</div>
 
-<div id="projects">
+<!-- <div id="projects">
 
 	<div class="divider"></div>
 	<h1>More Projects</h1>
@@ -635,7 +635,7 @@
 		</div>
 	</div>
 	</div>
-</div>
+</div> -->
 
 	</div>
 	<div id="footer"></div>
