--- a/footer.html
+++ b/footer.html
@@ -2,7 +2,7 @@
   
   <div id="container">
     <div class="contact-text" style="margin: 0">
-      <h2 style="color: var(--pink)">Emily Porat</h2> 
+      <h2 style="color: var(--purple)">Emily Porat</h2> 
       <h2 style="color: white">UX Designer</h2>
     </div>
 
