--- a/projects.html
+++ b/projects.html
@@ -39,12 +39,12 @@
       <div id="nav"></div>
       <div id="arrow-up" onclick="slideUp()"><i class="fa fa-angle-up"></i></div>
 
-      <div class="full-width" style="background-color: var(--mediumgray); height: 60vh;">
+      <div class="full-width" style="background-color: var(--mediumgray);">
         <div class="title-wrapper animate-reveal animate-first">
           <div class="title">
             <div>
               <h1 style="color: white">Projects</h1>
-              <div class="short-divider" style="background-color: var(--pink)"></div>
+              <div class="short-divider" style="background-color: var(--purple)"></div>
               <h3 style="color: white">From custom enterprise systems to public-facing dot gov rebrands, I’ve done a little bit of everything.</h3>
             </div>
           </div>
