--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@ $('#footer').load('http://emilyporat.com/footer.html');
 <meta name="viewport" content="width=device-width">
 <div id="nav"></div>
 
-      <div class="full-width" style="background-color: var(--mediumgray); height: 75vh; margin-top: 70px; margin-bottom: 0">
+      <div class="full-width" style="background-color: var(--mediumgray); margin-bottom: 0">
         <div class="title-wrapper animate-reveal animate-first">
           <div class="title" style="color: var(--white)">
             <div>
               <h4 style="color: var(--lightpink)">UX Researcher & Designer // Washington DC </h4>
               <h1>Emily Porat</h1>
               
-              <div style="background-color: var(--pink)" class="short-divider"></div>
+              <div style="background-color: var(--purple)" class="short-divider"></div>
               <h3>I'm a pragmatist who knows how to work within constraints and through complexity to get the job done, well. I'm currently at Deloitte Digital, where my work has supported gov programs for those seeking food security, affordable housing, emergency management, and more.</h3>
               <button class="btn" onclick="location.href='mailto:emporat@gmail.com';" value="Send me an email"; target="_blank">Get in touch</button>
             </div>
@@ -88,7 +88,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
 	</div>
 
 	<div class="full-width" style="margin-bottom: 0">
-		<div class="panel dark" style="background-color: var(--pink); text-align: center; padding-top: 10%; padding-bottom: 10%;">
+		<div class="panel dark" style="background-color: var(--purple); text-align: center; padding-top: 10%; padding-bottom: 10%;">
 			
 				<h2>This is a portfolio, after all.</h2>
 				<h3 style="width: 80%; margin-left: 10%; margin-right: 10%">You're probably here to see my project work. I have a limited selection online, but feel free to <a style="color: white" href='mailto:emporat@gmail.com'>email</a> me for more info!</h3>
