finished updating proj pages and resume

--- a/footer.html
+++ b/footer.html
@@ -9,6 +9,7 @@
     <div id="footer-links">
       <div class="contact-text">
         <h3 style="color: white">Projects</h3>
+          <p><a href="hud.html">HUD Design System</a></p>
           <p><a href="fha.html">FHA Website Redesign</a></p>
           <p><a href="fms-pos.html">Food Management System</a></p>
           <p><a href="rsvpd.html">RSVP'd</a></p>
