--- a/l&d.html
+++ b/l&d.html
@@ -36,7 +36,7 @@
     <div id="nav"></div>
 	<div id="arrow-up" onclick="slideUp()"><i class="fa fa-angle-up"></i></div>
 	
-		<div class="full-width" style="background-color: var(--purple); height: 70vh; margin-top: 70px">
+		<div class="full-width" style="background-color: var(--purple);">
 		  	<div class="title-wrapper animate-reveal animate-first">
 	            <div class="title">
 	                <div>
@@ -252,7 +252,7 @@
 		</div>
 		</div>
 
-		<div class="full-width">
+		<div class="full-width-mid-page">
 			<div class="panel dark">
 				<img src="pics/l&d/bpm1.jpg" class="pic-left">
 				<img src="pics/l&d/bpm2.jpg" class="pic-left">
@@ -289,7 +289,7 @@
 		</div>
 		</div>
 
-		<div class="full-width">
+		<div class="full-width-mid-page">
 		  	<div class="panel dark" style="text-align: center">
 		  		<div class="triple-pics"><img class="pic-right" src="pics/l&d/wire-landing.jpg"></div>
 		  		<div class="triple-pics"><img class="pic-right" src="pics/l&d/wire-faq.jpg"></div>
@@ -310,7 +310,7 @@
 		</div>
 
 
-
+<!-- 
 <div id="projects">
 	<div class="divider"></div>
 	<h1>More Projects</h1>
@@ -358,7 +358,7 @@
 		</div>
 	</div>
 	</div>
-</div>
+</div> -->
 
   	<div id="footer"></div>
   	</meta>
