--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
 
 	</div>
 
-	<div class="full-width" style="margin-bottom: 0">
+	<div class="full-width-mid-page" style="margin-bottom: 0">
 		<div class="panel dark" style="background-color: var(--purple); text-align: center; padding-top: 10%; padding-bottom: 10%;">
 			
 				<h2>This is a portfolio, after all.</h2>
