centered home intro

--- a/index.html
+++ b/index.html
@@ -41,26 +41,23 @@ $('#footer').load('http://emilyporat.com/footer.html');
 <meta name="viewport" content="width=device-width">
 <div id="nav"></div>
 
-      <div class="full-width" style="background-color: var(--mediumgray); margin-bottom: 0">
-        <div class="title-wrapper animate-reveal animate-first">
-          <div class="title" style="color: var(--white)">
+      <div class="full-width" style="background-color: var(--mediumgray); margin-bottom: 0; height: 95vh">
+        <div class="title-wrapper animate-reveal animate-first" style="height: 95vh; text-align: center;">
+          <div class="title" style="color: var(--white); width: 65%; margin: auto; padding-left: 0%">
             <div>
               <h4 style="color: var(--lightpink)">UX Researcher & Designer // Washington DC </h4>
               <h1>Emily Porat</h1>
-              
-              <div style="background-color: var(--purple)" class="short-divider"></div>
-              <h3>I'm a pragmatist who knows how to work within constraints and through complexity to get the job done, well. I'm currently at Deloitte Digital, where my work has supported gov programs for those seeking food security, affordable housing, emergency management, and more.</h3>
+              <div style="background-color: var(--purple); margin-left: 45%; margin-right: 45%; width: 10%" class="short-divider"></div>
+              <h3 style="padding-bottom: 15px">I'm a pragmatist who knows how to work within constraints and through complexity to get the job done, well. I'm currently at Deloitte Digital, where my work has supported gov programs for those seeking food security, affordable housing, emergency management, and more.</h3>
               <button class="btn" onclick="location.href='mailto:emporat@gmail.com';" value="Send me an email"; target="_blank">Get in touch</button>
             </div>
           </div>
         </div>
+
+        <div id="arrow-down" onclick="slideDown()"><i class="fa fa-angle-down"></i></div>
       </div>
 
 	<div class="panel" id="summary">
-
-
-
-
       <div class="panel context">
         <div class="context-summary">
           <h2>What I'm All About</h2>
@@ -69,11 +66,11 @@ $('#footer').load('http://emilyporat.com/footer.html');
           <h3>
           <div class="short-divider"></div>
           <p> 
-            My design process isn't an exact science, but it is scientific: I view every design concept as a hypothesis waiting to be tested. Spreadsheets and pro-con lists are my secret weapon when it comes to organizing and synthesizing complexity - which is what I do best.
+            My design process isn't an exact science, but it is scientific: I view every design concept as a hypothesis waiting to be tested. Spreadsheets and pro-con lists are my secret weapons when it comes to organizing and synthesizing complexity - which is what I do best.
           </p>
-			<p>While I consider myself a generalist, I shine most in the early stages of design because I firmly believe that (just enough) research is essential to getting a product right. There is nothing more satisfying to me than a neatly packaged deck that breaks down thousands of research findings into just a few slides.</p>
-			<p>I have really high standards for myself - I'm not physically capable of half-assing something. I know when to step up and take charge, but I also strive to give others opportunities to make an impact.</p>
-			<p>For more background on skills + experience, check out the <a href='about.html'>about</a> page or <a href="resume.pdf">download my résumé</a></p>
+    			<p>While I consider myself a generalist, I shine most in the early stages of design because I firmly believe that (just enough) research is essential to getting a product right. There is nothing more satisfying to me than a neatly packaged deck that breaks down thousands of research findings into just a few slides.</p>
+    			<p>I have really high standards for myself - I'm not physically capable of half-assing something. I know when to step up and take charge, but I also strive to give others opportunities to make an impact.</p>
+    			<p>For more background on skills + experience, check out the <a href='about.html'>about</a> page or <a href="resume.pdf">download my résumé</a></p>
         </div>
 
         <div class="context-specifics">
