--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
         <div id="arrow-down" onclick="slideDown()"><i class="fa fa-angle-down"></i></div>
       </div>
 
-	<div class="panel" id="summary">
+	<div class="panel" id="summary" style="padding-top: 8%; padding-bottom: 8%">
       <div class="panel context">
         <div class="context-summary">
           <h2>What I'm All About</h2>
